--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,16 +36,27 @@ dist.jlink.output=${dist.jlink.dir}/ToHeavenProject
 endorsed.classpath=
 excludes=
 file.reference.commons-collections4-4.1.jar=..\\..\\SoftwareProject\\dist\\lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-io-2.11.0.jar=..\\..\\SoftwareProject\\dist\\lib\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\commons-io-2.11.0.jar
 file.reference.flatlaf-3.5.1.jar=..\\..\\SoftwareProject\\dist\\lib\\flatlaf-3.5.1.jar
+file.reference.flatlaf-3.5.1.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\flatlaf-3.5.1.jar
 file.reference.log4j-api-2.17.0.jar=..\\..\\SoftwareProject\\dist\\lib\\log4j-api-2.17.0.jar
+file.reference.log4j-api-2.17.0.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-core-2.17.2.jar=..\\..\\SoftwareProject\\dist\\lib\\log4j-core-2.17.2.jar
+file.reference.log4j-core-2.17.2.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\log4j-core-2.17.2.jar
 file.reference.poi-3.17.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-3.17.jar
+file.reference.poi-3.17.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-3.17.jar
 file.reference.poi-5.2.3.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-5.2.3.jar
+file.reference.poi-5.2.3.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-5.2.3.jar
 file.reference.poi-ooxml-3.17.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-3.17.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-5.2.3.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-schemas-3.17.jar=..\\..\\SoftwareProject\\dist\\lib\\poi-ooxml-schemas-3.17.jar
+file.reference.poi-ooxml-schemas-3.17.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.xmlbeans-2.6.0.jar=..\\..\\SoftwareProject\\dist\\lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=..\\SoftwareProjectFrameUser\\dist\\lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -61,7 +72,18 @@ javac.classpath=\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-5.2.3.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.commons-io-2.11.0.jar-1}:\
+    ${file.reference.flatlaf-3.5.1.jar-1}:\
+    ${file.reference.log4j-api-2.17.0.jar-1}:\
+    ${file.reference.log4j-core-2.17.2.jar-1}:\
+    ${file.reference.poi-3.17.jar-1}:\
+    ${file.reference.poi-5.2.3.jar-1}:\
+    ${file.reference.poi-ooxml-3.17.jar-1}:\
+    ${file.reference.poi-ooxml-5.2.3.jar-1}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
