--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,26 +35,37 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ToHeavenProject
 endorsed.classpath=
 excludes=
+file.reference.commons-collections4-4.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-1=dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-2=..\\ToHeavenProject\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-io-2.11.0.jar=dist\\lib\\commons-io-2.11.0.jar
 file.reference.commons-io-2.11.0.jar-1=..\\ToHeavenProject\\dist\\lib\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\commons-io-2.11.0.jar
+file.reference.flatlaf-3.5.1.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\flatlaf-3.5.1.jar
 file.reference.flatlaf-3.5.1.jar-1=dist\\lib\\flatlaf-3.5.1.jar
 file.reference.flatlaf-3.5.1.jar-2=..\\ToHeavenProject\\dist\\lib\\flatlaf-3.5.1.jar
 file.reference.log4j-api-2.17.0.jar=dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-api-2.17.0.jar-1=..\\ToHeavenProject\\dist\\lib\\log4j-api-2.17.0.jar
+file.reference.log4j-api-2.17.0.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-core-2.17.2.jar=dist\\lib\\log4j-core-2.17.2.jar
 file.reference.log4j-core-2.17.2.jar-1=..\\ToHeavenProject\\dist\\lib\\log4j-core-2.17.2.jar
+file.reference.log4j-core-2.17.2.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\log4j-core-2.17.2.jar
+file.reference.poi-3.17.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-3.17.jar
 file.reference.poi-3.17.jar-1=dist\\lib\\poi-3.17.jar
 file.reference.poi-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-3.17.jar
 file.reference.poi-5.2.3.jar=dist\\lib\\poi-5.2.3.jar
 file.reference.poi-5.2.3.jar-1=..\\ToHeavenProject\\dist\\lib\\poi-5.2.3.jar
+file.reference.poi-5.2.3.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-5.2.3.jar
+file.reference.poi-ooxml-3.17.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-1=dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-5.2.3.jar=dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-5.2.3.jar-1=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-5.2.3.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-5.2.3.jar
+file.reference.poi-ooxml-schemas-3.17.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-1=dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-schemas-3.17.jar
+file.reference.xmlbeans-2.6.0.jar=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-1=dist\\lib\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-2=..\\ToHeavenProject\\dist\\lib\\xmlbeans-2.6.0.jar
 includes=**
@@ -83,7 +94,18 @@ javac.classpath=\
     ${file.reference.poi-ooxml-schemas-3.17.jar-2}:\
     ${file.reference.xmlbeans-2.6.0.jar-2}:\
     ${file.reference.poi-ooxml-3.17.jar-2}:\
-    ${file.reference.poi-ooxml-5.2.3.jar-1}
+    ${file.reference.poi-ooxml-5.2.3.jar-1}:\
+    ${file.reference.commons-collections4-4.1.jar}:\
+    ${file.reference.commons-io-2.11.0.jar-2}:\
+    ${file.reference.flatlaf-3.5.1.jar}:\
+    ${file.reference.log4j-api-2.17.0.jar-2}:\
+    ${file.reference.log4j-core-2.17.2.jar-2}:\
+    ${file.reference.poi-3.17.jar}:\
+    ${file.reference.poi-5.2.3.jar-2}:\
+    ${file.reference.poi-ooxml-3.17.jar}:\
+    ${file.reference.poi-ooxml-5.2.3.jar-2}:\
+    ${file.reference.poi-ooxml-schemas-3.17.jar}:\
+    ${file.reference.xmlbeans-2.6.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
