--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,18 +36,24 @@ dist.jlink.output=${dist.jlink.dir}/ToHeavenProject
 endorsed.classpath=
 excludes=
 file.reference.commons-collections4-4.1.jar=../commons-collections4-4.1.jar
+file.reference.commons-collections4-4.1.jar-1=..\\UpUpDAO_verCopyCopy\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-3=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-4=..\\SoftwareProjectFinal\\dist\\lib\\commons-collections4-4.1.jar
+file.reference.commons-io-2.11.0.jar=..\\UpUpDAO_verCopyCopy\\dist\\lib\\commons-io-2.11.0.jar
 file.reference.commons-io-2.11.0.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\commons-io-2.11.0.jar
 file.reference.commons-io-2.11.0.jar-3=..\\SoftwareProjectFinal\\dist\\lib\\commons-io-2.11.0.jar
 file.reference.flatlaf-3.5.1.jar=../flatlaf-3.5.1.jar
+file.reference.flatlaf-3.5.1.jar-1=..\\UpUpDAO_verCopyCopy\\dist\\lib\\flatlaf-3.5.1.jar
 file.reference.flatlaf-3.5.1.jar-3=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\flatlaf-3.5.1.jar
 file.reference.flatlaf-3.5.1.jar-4=..\\SoftwareProjectFinal\\dist\\lib\\flatlaf-3.5.1.jar
+file.reference.log4j-api-2.17.0.jar=..\\UpUpDAO_verCopyCopy\\dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-api-2.17.0.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\log4j-api-2.17.0.jar
 file.reference.log4j-api-2.17.0.jar-3=..\\SoftwareProjectFinal\\dist\\lib\\log4j-api-2.17.0.jar
+file.reference.log4j-core-2.17.2.jar=..\\UpUpDAO_verCopyCopy\\dist\\lib\\log4j-core-2.17.2.jar
 file.reference.log4j-core-2.17.2.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\log4j-core-2.17.2.jar
 file.reference.log4j-core-2.17.2.jar-3=..\\SoftwareProjectFinal\\dist\\lib\\log4j-core-2.17.2.jar
 file.reference.poi-3.17.jar=../poi-3.17.jar
+file.reference.poi-3.17.jar-1=..\\UpUpDAO_verCopyCopy\\dist\\lib\\poi-3.17.jar
 file.reference.poi-3.17.jar-3=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-3.17.jar
 file.reference.poi-5.2.3.jar-1=..\\ToHeavenProject\\dist\\lib\\poi-5.2.3.jar
 file.reference.poi-5.2.3.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-5.2.3.jar
@@ -55,11 +61,13 @@ file.reference.poi-5.2.3.jar-3=..\\SoftwareProjectFinal\\dist\\lib\\poi-5.2.3.ja
 file.reference.poi-ooxml-3.17.jar=../poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-3.17.jar
 file.reference.poi-ooxml-3.17.jar-3=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-3.17.jar
+file.reference.poi-ooxml-5.2.3.jar=..\\UpUpDAO_verCopyCopy\\dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-5.2.3.jar-2=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-5.2.3.jar
 file.reference.poi-ooxml-schemas-3.17.jar=../poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-2=..\\ToHeavenProject\\dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.poi-ooxml-schemas-3.17.jar-3=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\poi-ooxml-schemas-3.17.jar
 file.reference.xmlbeans-2.6.0.jar=../xmlbeans-2.6.0.jar
+file.reference.xmlbeans-2.6.0.jar-1=..\\UpUpDAO_verCopyCopy\\dist\\lib\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-3=C:\\Users\\User\\Documents\\NetBeansProjects\\Software_masterClone\\dist\\lib\\xmlbeans-2.6.0.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
@@ -91,7 +99,15 @@ javac.classpath=\
     ${file.reference.poi-3.17.jar}:\
     ${file.reference.poi-ooxml-3.17.jar}:\
     ${file.reference.poi-ooxml-schemas-3.17.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}
+    ${file.reference.xmlbeans-2.6.0.jar}:\
+    ${file.reference.commons-collections4-4.1.jar-1}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.flatlaf-3.5.1.jar-1}:\
+    ${file.reference.log4j-api-2.17.0.jar}:\
+    ${file.reference.log4j-core-2.17.2.jar}:\
+    ${file.reference.poi-3.17.jar-1}:\
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.poi-ooxml-5.2.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
